@@ -3,6 +3,7 @@ $Id: Changelog.txt,v 1.20 2011/10/07 09:21:19 nanard Exp $
 2011/10/07:
 	unlink unix socket before binding.
 	set SO_REUSEADDR on SSDP socket.
+	daemonize after init
 
 VERSION 1.1:
 
